spoiled/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoiled
  labels:
    app: spoiled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spoiled
  template:
    metadata:
      labels:
        app: spoiled
    spec:
      containers:
      - name: spoiled
        image: phoenix.azurecr.io/spoiled:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 256Mi
        ports:
        - containerPort: 8080
