spoiled/worker-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoiled-rq-worker
  labels:
    app: spoiled-rq-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spoiled-rq-worker
  template:
    metadata:
      labels:
        app: spoiled-rq-worker
    spec:
      containers:
      - name: spoiled-rq-worker
        image: phoenix.azurecr.io/spoiled:latest
        imagePullPolicy: Always
        command: ["./mpesa_worker_start.sh"]
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 256Mi
