spoiled/spoiled-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoiled
  labels:
    app: spoiled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spoiled
  template:
    metadata:
      labels:
        app: spoiled
    spec:
      containers:
      - name: spoiled
        image: gcr.io/bamboo-insight-254/spoiled:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 256Mi
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: spoiled
spec:
  type: NodePort
  selector:
    app: spoiled
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
